# QP-7C_RP2040_CAT

./: README.md  qp7c_rp2040_dc_cat.uf2  qp7c_rp2040_super450_cat.uf2  qp7c_rp2040_super455_cat.uf2
qp7c_rp2040_cat/: CMakeLists.txt
qp7c_rp2040_cat/src/: main.c  si5351.c  si5351.h  tusb_config.h  usb_audio.c  usb_audio.h  usb_descriptors.c  usb_descriptors.h  ws2812.pio  ws2812.pio.h
